k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lahoucine-app
  labels:
    app: lahoucine-app
    tags.datadoghq.com/service: lahoucine-app
    tags.datadoghq.com/env: prod
    tags.datadoghq.com/version: "1.0.0"
    tags.datadoghq.com/team: pre-sales-engineering
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lahoucine-app
  template:
    metadata:
      labels:
        app: lahoucine-app
        tags.datadoghq.com/service: lahoucine-app
        tags.datadoghq.com/env: prod
        tags.datadoghq.com/version: "1.0.0"
        tags.datadoghq.com/team: pre-sales-engineering
    spec:
      serviceAccountName: lahoucine-app
      containers:
        - name: lahoucine-app
          image: 369042512949.dkr.ecr.eu-west-2.amazonaws.com/lahoucine-flask:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
