k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lahoucine-app-frontend
  labels:
    app: lahoucine-app-frontend
    tags.datadoghq.com/service: lahoucine-app-frontend
    tags.datadoghq.com/env: prod
    tags.datadoghq.com/version: "1.0.0"
    tags.datadoghq.com/team: pre-sales-engineering
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lahoucine-app-frontend
  template:
    metadata:
      labels:
        app: lahoucine-app-frontend
        tags.datadoghq.com/service: lahoucine-app-frontend
        tags.datadoghq.com/env: prod
        tags.datadoghq.com/version: "1.0.0"
        tags.datadoghq.com/team: pre-sales-engineering
    spec:
      containers:
        - name: lahoucine-app-frontend
          image: 369042512949.dkr.ecr.eu-west-2.amazonaws.com/lahoucine-app-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 128Mi
