k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lahoucine-app-frontend
  labels:
    app: lahoucine-app-frontend
spec:
  type: ClusterIP
  selector:
    app: lahoucine-app-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
